comparison widget update; datal loads on select change; height of list items fixed with overflow to scroll, allows better comparison; #2

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -441,18 +441,10 @@ li h6 {
     margin-top: 1em;
 }
 
-.loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+.comparison-result ul li {
+    height: 153px;
+    overflow-y: scroll;
+    margin-bottom: 1em;
 }
 
 
